# hackathon-api

./: .gitignore  README.md  Taskfile.yaml  api.http  docker-compose.yaml  pyproject.toml  routes.txt
.github/workflows/: actions.yml  main_listening-ear-api.yml
src/hackathon_api/: config.py  db.py  main.py
